; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_mc5.c_dbgi_wr_data3.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_mc5.c_dbgi_wr_data3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@A_MC5_DB_DBGI_REQ_DATA0 = common dso_local global i32 0, align 4
@A_MC5_DB_DBGI_REQ_DATA1 = common dso_local global i32 0, align 4
@A_MC5_DB_DBGI_REQ_DATA2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*, i32, i32, i32)* @dbgi_wr_data3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dbgi_wr_data3(%struct.adapter* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.adapter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.adapter*, %struct.adapter** %5, align 8
  %10 = load i32, i32* @A_MC5_DB_DBGI_REQ_DATA0, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @t3_write_reg(%struct.adapter* %9, i32 %10, i32 %11)
  %13 = load %struct.adapter*, %struct.adapter** %5, align 8
  %14 = load i32, i32* @A_MC5_DB_DBGI_REQ_DATA1, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @t3_write_reg(%struct.adapter* %13, i32 %14, i32 %15)
  %17 = load %struct.adapter*, %struct.adapter** %5, align 8
  %18 = load i32, i32* @A_MC5_DB_DBGI_REQ_DATA2, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @t3_write_reg(%struct.adapter* %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @t3_write_reg(%struct.adapter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
